# e-boks_forward

./: CMakeLists.txt  README.md
cmake/Modules/: FindLibXml++.cmake
src/eboks/: application.cpp  application.hpp  attachment.hpp  constants.hpp  cryptographic_manager.cpp  cryptographic_manager.hpp  folder.hpp  identity.cpp  identity.hpp  logon.cpp  logon.hpp  message.hpp  sender.hpp  time_manager.hpp  user.cpp  user.hpp  xml_constructor.hpp
src/eboks/connection/: handler.cpp  handler.hpp  request_builder.cpp  request_builder.hpp  response_parser.cpp  response_parser.hpp  session.cpp  session.hpp  uri_builder.cpp  uri_builder.hpp
src/eboks/content/: attachment.hpp  folder.hpp  message.hpp  sender.hpp
src/eboks/wrappers/python/: wrapper.cpp  wrapper.hpp
src/eboks/wrappers/ruby/: wrapper.cpp  wrapper.hpp
test/: authentication.cpp  exceptions.cpp  xml_construction.cpp
test/ruby/: eboks.rb
